[gd_scene load_steps=8 format=3 uid="uid://67s4iet66nil"]

[ext_resource type="Theme" uid="uid://7nmlsyfocodh" path="res://resources/themes/default.theme" id="1_eoo1b"]
[ext_resource type="Script" uid="uid://25rrrg2uif23" path="res://content/screens/level_screen/level_screen.gd" id="1_pajnh"]
[ext_resource type="Script" uid="uid://d0lhhsrgcuf4g" path="res://content/screens/level_screen/set_scroll.gd" id="3_ka820"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ka820"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_jlacy"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pajnh"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_eoo1b"]
size = Vector2(32, 32)

[node name="LevelScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_eoo1b")
script = ExtResource("1_pajnh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Select"
icon = SubResource("PlaceholderTexture2D_ka820")

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Back"
icon = SubResource("PlaceholderTexture2D_jlacy")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
focus_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("3_ka820")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Level10" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Level 10"
icon = SubResource("PlaceholderTexture2D_pajnh")

[node name="Level9" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Level 9"
icon = SubResource("PlaceholderTexture2D_pajnh")

[node name="Level8" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Level 8"
icon = SubResource("PlaceholderTexture2D_pajnh")

[node name="Level7" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Level 7"
icon = SubResource("PlaceholderTexture2D_pajnh")

[node name="Level6" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Level 6"
icon = SubResource("PlaceholderTexture2D_pajnh")

[node name="Level5" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Level 5"
icon = SubResource("PlaceholderTexture2D_pajnh")

[node name="Level4" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Level 4"
icon = SubResource("PlaceholderTexture2D_pajnh")

[node name="Level3" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Level 3"
icon = SubResource("PlaceholderTexture2D_pajnh")

[node name="Level2" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Level 2"
icon = SubResource("PlaceholderTexture2D_pajnh")

[node name="Level1" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Level2")
focus_neighbor_bottom = NodePath("../Tutorial")
focus_next = NodePath("../Level2")
focus_previous = NodePath("../Tutorial")
disabled = true
text = "Level 1"
icon = SubResource("PlaceholderTexture2D_pajnh")

[node name="Tutorial" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Level1")
focus_next = NodePath("../Level1")
text = "Tutorial"
icon = SubResource("PlaceholderTexture2D_eoo1b")

[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level10" to="." method="_on_level_10_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
