extends Control

@onready var level_10: Button = $ScrollContainer/VBoxContainer/Level10
@onready var level_9: Button = $ScrollContainer/VBoxContainer/Level9
@onready var level_8: Button = $ScrollContainer/VBoxContainer/Level8
@onready var level_7: Button = $ScrollContainer/VBoxContainer/Level7
@onready var level_6: Button = $ScrollContainer/VBoxContainer/Level6
@onready var level_5: Button = $ScrollContainer/VBoxContainer/Level5
@onready var level_3: Button = $ScrollContainer/VBoxContainer/Level3
@onready var level_2: Button = $ScrollContainer/VBoxContainer/Level2
@onready var level_1: Button = $ScrollContainer/VBoxContainer/Level1
@onready var tutorial: Button = $ScrollContainer/VBoxContainer/Tutorial



func _on_tutorial_pressed() -> void:
	pass # Replace with function body.


func _on_level_1_pressed() -> void:
	pass # Replace with function body.


func _on_level_2_pressed() -> void:
	pass # Replace with function body.


func _on_level_3_pressed() -> void:
	pass # Replace with function body.


func _on_level_4_pressed() -> void:
	pass # Replace with function body.


func _on_level_5_pressed() -> void:
	pass # Replace with function body.


func _on_level_6_pressed() -> void:
	pass # Replace with function body.


func _on_level_7_pressed() -> void:
	pass # Replace with function body.


func _on_level_8_pressed() -> void:
	pass # Replace with function body.


func _on_level_9_pressed() -> void:
	pass # Replace with function body.


func _on_level_10_pressed() -> void:
	pass # Replace with function body.



func _on_select_button_pressed() -> void:
	pass # Replace with function body.


func _on_back_button_pressed() -> void:
	pass # Replace with function body.
